# scllm

./: .flake8  .gitignore  README.md  api.html  format.sh  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: branch.yaml  docs.yaml  release.yaml
_autosummary/: scllm.cluster.html  scllm.html  scllm.pl.html  scllm.tl.chains.html  scllm.tl.cluster_annotation.html  scllm.tl.html  scllm.tl.parser.html  scllm.tl.prompts.html
_sources/: api.rst  index.rst
_sources/_autosummary/: scllm.cluster.rst  scllm.pl.rst  scllm.rst  scllm.tl.chains.rst  scllm.tl.cluster_annotation.rst  scllm.tl.parser.rst  scllm.tl.prompts.rst  scllm.tl.rst
_sources/notebooks/: factor_analysis.ipynb  xenium.ipynb
_static/: documentation_options.js
docs/: api.rst  conf.py  index.rst
docs/notebooks/: angelidis.ipynb  cell_types.ipynb  factor_analysis.ipynb  index.rst  interface.ipynb  nmf.ipynb  pbmc3k.ipynb
notebooks/: angelidis.html  cell_types.html  cell_types.ipynb  factor_analysis.html  factor_analysis.ipynb  index.html  interface.html  nmf.html  pbmc3k.html  pbmc3k.ipynb  xenium.html
src/scllm/: __init__.py  cluster.py  get_quote.py  prompts.py
src/scllm/pl/: __init__.py  factor_embedding.py  factor_ridge.py  factor_stripplot.py  utils.py
src/scllm/tl/: __init__.py  base.py  chains.py  cluster_annotation.py  factor_annotation.py  legacy.py  model.py  parser.py  prompts.py  utils.py  validator.py
tests/: test_cluster_annotation.py  test_factor_annotation.py  test_factor_embedding.py  test_get_quote.py
