[project]
name = "scllm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harald Vohringer", email = "harald.voeh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "safety>=3.3.1",
    "sphinx-book-theme>=1.1.4",
]
