[project]
name = "scllm"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Harald Vohringer", email = "harald.voeh@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "scanpy>=1.11.0",
]
license = { text = "MIT" }
keywords = ["single-cell", "llm", "bioinformatics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Homepage = "https://github.com/sagar87/scllm"
Documentation = "https://haraldvohringer.com/scllm/"
Repository = "https://github.com/sagar87/scllm"
"Bug Tracker" = "https://github.com/sagar87/scllm/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scllm"]

[dependency-groups]
dev = [
    "bandit>=1.8.3",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "isort>=6.0.1",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "safety>=3.3.1",
    "sphinx<7.0.0",
    "sphinx-book-theme>=1.1.4",
]
